--- a/latex/final_report/templateBIOBJmultiple.tex
+++ b/latex/final_report/templateBIOBJmultiple.tex
@@ -70,11 +70,11 @@
 
 \IfFileExists{\bbobdatapath ppfig2_f001.pdf}{2 algorithms currently not supported}{}
 
-\title{Benchmarking of the Indicator-based evolution algorithm using the Bi-Objective BBOB Test Suite
+\title{Benchmarking of the Indicator-Based Evolutionary Algorithm using the Bi-Objective BBOB Test Suite
 % \titlenote{If needed}
 }
 \subtitle{Final report
-\titlenote{Submission deadline: October 21st.}}
+\titlenote{Submission deadline: October 21st. \\ Source code is available at \url{https://github.com/tritas/ibea}}}
 
 \numberofauthors{5}
 \author{
@@ -93,7 +93,7 @@ Aris Tritas
 
 \maketitle
 \begin{abstract}
-The objective of this project was to study, implement and benchmark the Indicator Based Evolutionary Algorithm \\ (IBEA) using  the Comparing Continuous Optimizer (COCO) platform. Firstly we provide a brief overview of the algorithm. Secondly, we describe our implementation and experimental setup. Finally, we discuss the obtained results and compare them to both baseline approaches and related work.
+The objective of this project was to study, implement and benchmark the indicator-based evolutionary algorithm \cite{zitzler2004indicator}\\ (IBEA) using  the Comparing Continuous Optimizer (COCO) platform. Firstly we provide a brief overview of the algorithm. Secondly, we describe our implementation and experimental setup. Finally, we discuss the obtained results and compare them to both baseline approaches and related work.
 \end{abstract}
 
 \section{Setting}
@@ -101,8 +101,8 @@ In the context of a multi-objective optimization, the main goal is to find a goo
 An evolutionary algorithm is an exploration strategy of the domain space $\mathbb{R}^n$ which seeks optimal solution vectors defined in the objective space $\mathbb{R}^k$ (here $k=2$) by promoting at each generation the fittest and/or the  newest individuals from a population of decision vectors.
 
 The performance measure used by IBEA for determining the relative quality of two solution sets in the objective space is a binary indicator function $I: \Omega \times \Omega \rightarrow \mathbb{R}$. 
-In terms of two decision vectors $\bm{x}^1$ and $\bm{x}^2$,  the domination relation is defined as : $\bm{x}^1 \succ \bm{x}^2 \leftrightarrow ( f_i(\bm{x}^1) \leq f_i(\bm{x}^2) \; \forall i \in \{1, ..., n\} \;\text{and}\; f_j(\bm{x}^1) < f_j(\bm{x}^2)$ for at least one objective$)$. 
-The epsilon indicator, which is compliant with this domination relationship, is defined for pairwise comparisons as: $$I_{\epsilon^+} (\{\bm{x}^1\}, \{\bm{x}^2\}) = \min_\epsilon f_i(\bm{x}^1) - \epsilon \leq f_i(\bm{x}^2) \; \forall i \in \{1, ..., n\}$$. 
+In terms of two decision vectors $\bm{x}^1$ and $\bm{x}^2$,  the domination relation is defined as : $\bm{x}^1 \succ \bm{x}^2 \leftrightarrow ( f_i(\bm{x}^1) \leq f_i(\bm{x}^2) \; \forall i \in \{1, ..., k\} \;\text{and}\; f_j(\bm{x}^1) < f_j(\bm{x}^2)$ for at least one objective$)$. 
+The epsilon indicator, which is compliant with this domination relationship, is defined for pairwise comparisons as: $$I_{\epsilon^+} (\{\bm{x}^1\}, \{\bm{x}^2\}) = \min_\epsilon f_i(\bm{x}^1) - \epsilon \leq f_i(\bm{x}^2) \; \forall i \in \{1, ..., k\}$$. 
 Its focus is to summarize the minimum distance needed to improve on the Pareto set approximation to a single scalar. 
 Intuitively, the reduction to a single scalar may incur a  loss of information regarding some dimensions of objective space. Indeed, the fact that the indicator chooses the minimum improvement across all objectives implies \emph{conservative} rather than more \emph{optimistic} updates of the fitness estimate. Clearly, we may miss out on potential improvement on some of the targeted objectives. The fitness value is defined in the sequel as a measure of the usefulness of each individual with regards to the optimization goal. As such, the algorithm tries to maximize it.
 $$ F(\bm{x}^1) = \sum_{\bm{x}^2 \in P \setminus \{\bm{x}^1\}} - \exp{\frac{I(\{\bm{x}^1\}, \{\bm{x}^2\})}{\kappa}}$$ where $P$ is the population set, and $\bm{x} \in \mathbb{R}^n$. The fitness function of an approximation set is defined as a \emph{dominance preserving relation}.
@@ -133,14 +133,16 @@ The optimizer is an object which incurs some overhead in Python. Except for the 
 
 \subsection{Recombination}
 
-At first, the crossover operators we experimented with were intermediate weighting and discrete recombination. Then we implemented the Simulated Binary Crossover \cite{deb1994simulated}. The results reported here used SBX-5 for recombination.
+At first, the crossover operators we experimented with were intermediate weighting and discrete recombination. Then we implemented the Simulated Binary Crossover \cite{deb1994simulated},\cite{beyer2001self}. The results reported here used SBX-5 for recombination.
 
 \subsection{Variation}
 
-For the mutation step, we began by simply adding isotropic Gaussian noise with fixed variance to the produced offspring. However, it is well known that fixed variance does not produce the fastest target values search.
+For the mutation step, we began by simply adding isotropic Gaussian noise with fixed variance to the produced offspring. 
+It is well known that fixed variance results in a rather slow search for target vectors. 
+For that reason we implemented derandomized step-size adaptation (Algorithm 2, \cite{hansen2015evolution}).
 
 
-\subsection*{Budget pitfall} Before the intermediate report we used an extremely small budget, which had the effect of delaying  realistic benchmarking.
+\subsection*{Budget pitfall} Before the intermediate report we used an irrelevant budget value. Thus the start of benchmarking was delayed.
 
 \section{Experimental setup}
 Our idea was to evaluate the influence of hyper-parameters on the performance achieved for different function groups and in different number of dimensions. For a reasonably low budget ($10^3$) and $10^6$ to $10^9$ number of runs, we tried the following ranges for hyper-parameters (best values in bold):
@@ -159,7 +161,7 @@ Our focus was mostly on crossover and mutation probabilities, as well as populat
 \section{CPU Timing}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % note that the following text is just a proposal and can/should be changed to your needs:
-In order to evaluate the CPU timing of the algorithm, we have run the \algname with restarts on the entire bbob-biobj test suite \cite{biobj2016func} for $10 D$ function evaluations. The Python code was run on a Intel(R) Core(TM) i7 CPU. For a population size of 100, the time per function evaluation ranges between $2.2ms$ and $6.5ms$ depending on whether we use isotropic mutation or not.  
+In order to evaluate the CPU timing of the algorithm, we have run the \algname with restarts on the entire bbob-biobj test suite \cite{biobj2016func}. The Python code was run on a Intel(R) Core(TM) i7 CPU. For a population size of 100, the time per function evaluation for $10D$ is $2.2ms$ and $6.5ms$ for isotropic and derandomized step-size adaptation mutation respectively.  
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -169,38 +171,33 @@ In order to evaluate the CPU timing of the algorithm, we have run the \algname w
 Results of \algname\ from experiments according to \cite{hansen2016exp} and \cite{brockhoff2016biobjective} on the benchmark
 functions given in \cite{biobj2016func} are presented in
 Figures~\ref{fig:ECDFsingleOne}, \ref{fig:ECDFsingleTwo}. The experiments were performed with COCO \cite{hansen2016cocoplat}, version 15.4.
-
-Presented here are comparative ECDFs on $2 D$ with two baseline algorithms: Random Search and NSGA-II. Our best configuration is also compared with the implementation of IBEA-$\epsilon$ in the C language and the implementation of IBEA with Hypervolume indicator in Python.
+We present here comparative ECDFs on $2D$ and $5D$ with Random Search and NSGA-II \cite{deb2002fast} as baselines. The comparison is also done with the implementation of IBEA-$\epsilon$ in C and the implementation of IBEA with Hypervolume indicator in Python.
 
 \subsection*{Remark}
-In the aRT tables, IBEA corresponds to the following order: IBEA-$\epsilon$ in C, IBEA-$\epsilon$ in Python and IBEA-HV in Python.
+In the aRT tables, IBEA corresponds to the following order: IBEA-$\epsilon$ in C, IBEA-$\epsilon$ in Python and IBEA-HV in Python (the last one is absent in $5D$)
 
 \subsection{Observations}
 
-In low dimension, we notice that the instances in which our algorithm performs moderately well is the \textbf{separable}, \textbf{moderate} and \textbf{weakly-structured} case. It fails however in the face of mutimodal and ill-conditioned functions.
+In low dimension, we notice that the instances in which our algorithm performs moderately well is the \textbf{separable}, \textbf{moderate} and \textbf{weakly-structured} case. Examples of this are the separable Ellipsoid (Attractive Sector and Rosenbrock). It fails however in the face of multimodal and ill-conditioned functions.
 
-Generally speaking, derandomized step-size adaptation performs better than isotropic mutation. Moreover, extreme values of variance for the isotropic mutation negatively impact the performance of the algorithm.
+Clearly, derandomized step-size adaptation performs better than isotropic mutation. Unsurprisingly, the algorithm reached a runtime of $1e{-3}$ iff the variance is adapted. Moreover, extreme values of variance for the isotropic mutation negatively impact the performance of the algorithm.
 
-In higher dimensions, the trends are the same. Clearly the supplementary degrees of freedom decrease the number of targets reached.
+In higher dimensions, the trends are the same. The supplementary degrees of freedom clearly decreases the number of targets reached.
 
-\subsection{Comparison of isotropic and derandomized mutation operators}
-
-With no surprise that our algorithm has a runtime of $1e{-3}$ iff the variance is adapted. gets to 10-3 on f12
+The fact that our implementation is inferior to random search, independently of problem conditioning, indicates that our evolution strategy either converges to local optima too often, or does not preserve diversity well enough (and that could be a reason why uniform search beats it given high enough budget).
 
 \subsection{Related Work}
-To an extent the comparison  as well as results of groups studing IBEA-HV is quite revealing . 
-We can safely say that the $\epsilon$ indicator may be overly simplistic for the wide range of optimization functions benchmarked
-We also observe that using a better indicator tends to find targets much faster.
+To some extent the comparison of the results achieved with those of the group studing IBEA-HV is quite revealing. 
+Our intuition that the $\epsilon$ indicator may be overly simplistic for the wide range of optimization functions benchmarked is in some sense confirmed. Observing the impact of the indicator function on the aRT, overall IBEA-HV not only finds better targets more often, but it also finds them in much fewer evaluations (at least for the $2D$ results given).
 
 \section*{Conclusion}
-Going forward, we may think that a more advanced step-size adaptation scheme such as CMA, and also importantly a different indicator function may function well for different problems.
-
+For the implementation and benchmarking of a scientifically approved evolution strategy, we were confronted throughtout this project with the scientific process in multi-objective black-box optimization algorithms. We had to autonomously develop and test diverse evolutionary approaches, and furthermore reason about their respective pertinence and effectiveness. Going forward, we could think of indicator functions that may be  well-suited for a wide diversity of optimization problems. Of equal importance, we could think of step-size adaptation schemes (e.g CMA) to improve convergence to the global optimum.
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-% ECDFs per function in dimension 10
+% ECDFs per function in dimension 2
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{figure*}
@@ -249,7 +246,7 @@ Going forward, we may think that a more advanced step-size adaptation scheme suc
 
 \end{tabular}
  \caption{\label{fig:ECDFsingleOne}
- Bootstrapped empirical cumulative distribution of the number of objective function evaluations divided by dimension (FEvals/DIM) for $58$ targets with target precision in $\{-10^{-4}, -10^{-4.2}, $ $-10^{-4.4}, -10^{-4.6}, -10^{-4.8}, -10^{-5}, 0, 10^{-5}, 10^{-4.9}, 10^{-4.8}, \dots, 10^{-0.1}, 10^0\}$ for each single function $f_{1}$ to $f_{40}$ in 10-D. 
+ Bootstrapped empirical cumulative distribution of the number of objective function evaluations divided by dimension (FEvals/DIM) for $58$ targets with target precision in $\{-10^{-4}, -10^{-4.2}, $ $-10^{-4.4}, -10^{-4.6}, -10^{-4.8}, -10^{-5}, 0, 10^{-5}, 10^{-4.9}, 10^{-4.8}, \dots, 10^{-0.1}, 10^0\}$ for each single function $f_{1}$ to $f_{40}$ in 2-D. 
 }
 \end{figure*}
 
@@ -273,10 +270,87 @@ Going forward, we may think that a more advanced step-size adaptation scheme suc
 \includegraphics[width=0.2\textwidth]{pprldmany-single-functions/pprldmany_f055_02D}\\[-1.8ex]
 \end{tabular}
  \caption{\label{fig:ECDFsingleTwo}
- Bootstrapped empirical cumulative distribution of the number of objective function evaluations divided by dimension (FEvals/DIM) as in Fig.~\ref{fig:ECDFsingleOne} but for functions $f_{41}$ to $f_{55}$ in 10-D.
+ Bootstrapped empirical cumulative distribution of the number of objective function evaluations divided by dimension (FEvals/DIM) as in Fig.~\ref{fig:ECDFsingleOne} but for functions $f_{41}$ to $f_{55}$ in 2-D.
 }
 \end{figure*}
 
+
+% ECDFs per function in dimension 2
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\begin{figure*}
+\centering
+\begin{tabular}{@{\hspace*{-0.005\textwidth}}l@{\hspace*{-0.005\textwidth}}l@{\hspace*{-0.005\textwidth}}l@{\hspace*{-0.005\textwidth}}l@{\hspace*{-0.005\textwidth}}l@{\hspace*{-0.005\textwidth}}}
+\includegraphics[width=0.2\textwidth]{pprldmany-single-functions/pprldmany_f001_02D}&
+\includegraphics[width=0.2\textwidth]{pprldmany-single-functions/pprldmany_f002_05D}&
+\includegraphics[width=0.2\textwidth]{pprldmany-single-functions/pprldmany_f003_05D}&
+\includegraphics[width=0.2\textwidth]{pprldmany-single-functions/pprldmany_f004_05D}&
+\includegraphics[width=0.2\textwidth]{pprldmany-single-functions/pprldmany_f005_05D}\\[-1.8ex]
+\includegraphics[width=0.2\textwidth]{pprldmany-single-functions/pprldmany_f006_05D}&
+\includegraphics[width=0.2\textwidth]{pprldmany-single-functions/pprldmany_f007_05D}&
+\includegraphics[width=0.2\textwidth]{pprldmany-single-functions/pprldmany_f008_05D}&
+\includegraphics[width=0.2\textwidth]{pprldmany-single-functions/pprldmany_f009_05D}&
+\includegraphics[width=0.2\textwidth]{pprldmany-single-functions/pprldmany_f010_05D}\\[-1.8ex]
+\includegraphics[width=0.2\textwidth]{pprldmany-single-functions/pprldmany_f011_05D}&
+\includegraphics[width=0.2\textwidth]{pprldmany-single-functions/pprldmany_f012_05D}&
+\includegraphics[width=0.2\textwidth]{pprldmany-single-functions/pprldmany_f013_05D}&
+\includegraphics[width=0.2\textwidth]{pprldmany-single-functions/pprldmany_f014_05D}&
+\includegraphics[width=0.2\textwidth]{pprldmany-single-functions/pprldmany_f015_05D}\\[-1.8ex]
+\includegraphics[width=0.2\textwidth]{pprldmany-single-functions/pprldmany_f016_05D}&
+\includegraphics[width=0.2\textwidth]{pprldmany-single-functions/pprldmany_f017_05D}&
+\includegraphics[width=0.2\textwidth]{pprldmany-single-functions/pprldmany_f018_05D}&
+\includegraphics[width=0.2\textwidth]{pprldmany-single-functions/pprldmany_f019_05D}&
+\includegraphics[width=0.2\textwidth]{pprldmany-single-functions/pprldmany_f020_05D}\\[-1.8ex]
+\includegraphics[width=0.2\textwidth]{pprldmany-single-functions/pprldmany_f021_05D}&
+\includegraphics[width=0.2\textwidth]{pprldmany-single-functions/pprldmany_f022_05D}&
+\includegraphics[width=0.2\textwidth]{pprldmany-single-functions/pprldmany_f023_05D}&
+\includegraphics[width=0.2\textwidth]{pprldmany-single-functions/pprldmany_f024_05D}&
+\includegraphics[width=0.2\textwidth]{pprldmany-single-functions/pprldmany_f025_05D}\\[-1.8ex]
+\includegraphics[width=0.2\textwidth]{pprldmany-single-functions/pprldmany_f026_05D}&
+\includegraphics[width=0.2\textwidth]{pprldmany-single-functions/pprldmany_f027_05D}&
+\includegraphics[width=0.2\textwidth]{pprldmany-single-functions/pprldmany_f028_05D}&
+\includegraphics[width=0.2\textwidth]{pprldmany-single-functions/pprldmany_f029_05D}&
+\includegraphics[width=0.2\textwidth]{pprldmany-single-functions/pprldmany_f030_05D}\\[-1.8ex]
+\includegraphics[width=0.2\textwidth]{pprldmany-single-functions/pprldmany_f031_05D}&
+\includegraphics[width=0.2\textwidth]{pprldmany-single-functions/pprldmany_f032_05D}&
+\includegraphics[width=0.2\textwidth]{pprldmany-single-functions/pprldmany_f033_05D}&
+\includegraphics[width=0.2\textwidth]{pprldmany-single-functions/pprldmany_f034_05D}&
+\includegraphics[width=0.2\textwidth]{pprldmany-single-functions/pprldmany_f035_05D}\\[-1.8ex]
+\includegraphics[width=0.2\textwidth]{pprldmany-single-functions/pprldmany_f036_05D}&
+\includegraphics[width=0.2\textwidth]{pprldmany-single-functions/pprldmany_f037_05D}&
+\includegraphics[width=0.2\textwidth]{pprldmany-single-functions/pprldmany_f038_05D}&
+\includegraphics[width=0.2\textwidth]{pprldmany-single-functions/pprldmany_f039_05D}&
+\includegraphics[width=0.2\textwidth]{pprldmany-single-functions/pprldmany_f040_05D}\\[-1.8ex]
+
+\end{tabular}
+ \caption{\label{fig:ECDFsingleOne}
+ Bootstrapped empirical cumulative distribution of the number of objective function evaluations divided by dimension (FEvals/DIM) for $58$ targets with target precision in $\{-10^{-4}, -10^{-4.2}, $ $-10^{-4.4}, -10^{-4.6}, -10^{-4.8}, -10^{-5}, 0, 10^{-5}, 10^{-4.9}, 10^{-4.8}, \dots, 10^{-0.1}, 10^0\}$ for each single function $f_{1}$ to $f_{40}$ in 2-D. 
+}
+\end{figure*}
+
+\begin{figure*}
+\centering
+\begin{tabular}{@{\hspace*{-0.005\textwidth}}l@{\hspace*{-0.005\textwidth}}l@{\hspace*{-0.005\textwidth}}l@{\hspace*{-0.005\textwidth}}l@{\hspace*{-0.005\textwidth}}l@{\hspace*{-0.005\textwidth}}}
+\includegraphics[width=0.2\textwidth]{pprldmany-single-functions/pprldmany_f041_05D}&
+\includegraphics[width=0.2\textwidth]{pprldmany-single-functions/pprldmany_f042_05D}&
+\includegraphics[width=0.2\textwidth]{pprldmany-single-functions/pprldmany_f043_05D}&
+\includegraphics[width=0.2\textwidth]{pprldmany-single-functions/pprldmany_f044_05D}&
+\includegraphics[width=0.2\textwidth]{pprldmany-single-functions/pprldmany_f045_05D}\\[-1.8ex]
+\includegraphics[width=0.2\textwidth]{pprldmany-single-functions/pprldmany_f046_05D}&
+\includegraphics[width=0.2\textwidth]{pprldmany-single-functions/pprldmany_f047_05D}&
+\includegraphics[width=0.2\textwidth]{pprldmany-single-functions/pprldmany_f048_05D}&
+\includegraphics[width=0.2\textwidth]{pprldmany-single-functions/pprldmany_f049_05D}&
+\includegraphics[width=0.2\textwidth]{pprldmany-single-functions/pprldmany_f040_05D}\\[-1.8ex]
+\includegraphics[width=0.2\textwidth]{pprldmany-single-functions/pprldmany_f051_05D}&
+\includegraphics[width=0.2\textwidth]{pprldmany-single-functions/pprldmany_f052_05D}&
+\includegraphics[width=0.2\textwidth]{pprldmany-single-functions/pprldmany_f053_05D}&
+\includegraphics[width=0.2\textwidth]{pprldmany-single-functions/pprldmany_f054_05D}&
+\includegraphics[width=0.2\textwidth]{pprldmany-single-functions/pprldmany_f055_05D}\\[-1.8ex]
+\end{tabular}
+ \caption{\label{fig:ECDFsingleTwo}
+ Bootstrapped empirical cumulative distribution of the number of objective function evaluations divided by dimension (FEvals/DIM) as in Fig.~\ref{fig:ECDFsingleOne} but for functions $f_{41}$ to $f_{55}$ in 2-D.
+}
+\end{figure*}
 
 
 
@@ -323,34 +397,34 @@ multimodal-multimodal & multimodal-weakstructure & weakstructure-weakstructure &
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-%\begin{figure*}
-%\begin{tabular}{@{\hspace*{-0.009\textwidth}}c@{\hspace*{-0.014\textwidth}}c@{\hspace*{-0.016\textwidth}}c@{\hspace*{-0.02\textwidth}}c}
-%separable-separable & separable-moderate & separable-ill-cond. & separable-multimodal\\
-%\includegraphics[width=0.268\textwidth,trim=0 0 0 13mm, clip]{pprldmany_20D_1-separable_1-separable} &
-%\includegraphics[width=0.268\textwidth,trim=0 0 0 13mm, clip]{pprldmany_20D_1-separable_2-moderate} &
-%\includegraphics[width=0.268\textwidth,trim=0 0 0 13mm, clip]{pprldmany_20D_1-separable_3-ill-conditioned} &
-%\includegraphics[width=0.268\textwidth,trim=0 0 0 13mm, clip]{pprldmany_20D_1-separable_4-multi-modal}\\
-%separable-weakstructure & moderate-moderate & moderate-ill-cond. & moderate-multimodal\\
-%\includegraphics[width=0.268\textwidth,trim=0 0 0 13mm, clip]{pprldmany_20D_1-separable_5-weakly-structured} &
-%\includegraphics[width=0.268\textwidth,trim=0 0 0 13mm, clip]{pprldmany_20D_2-moderate_2-moderate} &
-%\includegraphics[width=0.268\textwidth,trim=0 0 0 13mm, clip]{pprldmany_20D_2-moderate_3-ill-conditioned} &
-%\includegraphics[width=0.268\textwidth,trim=0 0 0 13mm, clip]{pprldmany_20D_2-moderate_4-multi-modal}\\
-%moderate-weakstructure & ill-cond.-ill-cond. & ill-cond.-multimodal & ill-cond.-weakstructure\\
-%\includegraphics[width=0.268\textwidth,trim=0 0 0 13mm, clip]{pprldmany_20D_2-moderate_5-weakly-structured} &
-%\includegraphics[width=0.268\textwidth,trim=0 0 0 13mm, clip]{pprldmany_20D_3-ill-conditioned_3-ill-conditioned} &
-%\includegraphics[width=0.268\textwidth,trim=0 0 0 13mm, clip]{pprldmany_20D_3-ill-conditioned_4-multi-modal} &
-%\includegraphics[width=0.268\textwidth,trim=0 0 0 13mm, clip]{pprldmany_20D_3-ill-conditioned_5-weakly-structured} \\
-%multimodal-multimodal & multimodal-weakstructure & weakstructure-weakstructure & all 55 functions\\
-%\includegraphics[width=0.268\textwidth,trim=0 0 0 13mm, clip]{pprldmany_20D_4-multi-modal_4-multi-modal} &
-%\includegraphics[width=0.268\textwidth,trim=0 0 0 13mm, clip]{pprldmany_20D_4-multi-modal_5-weakly-structured} &
-%\includegraphics[width=0.268\textwidth,trim=0 0 0 13mm, clip]{pprldmany_20D_5-weakly-structured_5-weakly-structured} &
-%\includegraphics[width=0.268\textwidth,trim=0 0 0 13mm, clip]{pprldmany_20D_noiselessall}
-%\vspace*{-0.5ex}
-%\end{tabular}
-% \caption{\label{fig:ECDFsGroupsTwenty}
-% \bbobECDFslegend{20}
-% }
-%\end{figure*}
+\begin{figure*}
+\begin{tabular}{@{\hspace*{-0.009\textwidth}}c@{\hspace*{-0.014\textwidth}}c@{\hspace*{-0.016\textwidth}}c@{\hspace*{-0.02\textwidth}}c}
+separable-separable & separable-moderate & separable-ill-cond. & separable-multimodal\\
+\includegraphics[width=0.268\textwidth,trim=0 0 0 13mm, clip]{pprldmany_05D_1-separable_1-separable} &
+\includegraphics[width=0.268\textwidth,trim=0 0 0 13mm, clip]{pprldmany_05D_1-separable_2-moderate} &
+\includegraphics[width=0.268\textwidth,trim=0 0 0 13mm, clip]{pprldmany_05D_1-separable_3-ill-conditioned} &
+\includegraphics[width=0.268\textwidth,trim=0 0 0 13mm, clip]{pprldmany_05D_1-separable_4-multi-modal}\\
+separable-weakstructure & moderate-moderate & moderate-ill-cond. & moderate-multimodal\\
+\includegraphics[width=0.268\textwidth,trim=0 0 0 13mm, clip]{pprldmany_05D_1-separable_5-weakly-structured} &
+\includegraphics[width=0.268\textwidth,trim=0 0 0 13mm, clip]{pprldmany_05D_2-moderate_2-moderate} &
+\includegraphics[width=0.268\textwidth,trim=0 0 0 13mm, clip]{pprldmany_05D_2-moderate_3-ill-conditioned} &
+\includegraphics[width=0.268\textwidth,trim=0 0 0 13mm, clip]{pprldmany_05D_2-moderate_4-multi-modal}\\
+moderate-weakstructure & ill-cond.-ill-cond. & ill-cond.-multimodal & ill-cond.-weakstructure\\
+\includegraphics[width=0.268\textwidth,trim=0 0 0 13mm, clip]{pprldmany_05D_2-moderate_5-weakly-structured} &
+\includegraphics[width=0.268\textwidth,trim=0 0 0 13mm, clip]{pprldmany_05D_3-ill-conditioned_3-ill-conditioned} &
+\includegraphics[width=0.268\textwidth,trim=0 0 0 13mm, clip]{pprldmany_05D_3-ill-conditioned_4-multi-modal} &
+\includegraphics[width=0.268\textwidth,trim=0 0 0 13mm, clip]{pprldmany_05D_3-ill-conditioned_5-weakly-structured} \\
+multimodal-multimodal & multimodal-weakstructure & weakstructure-weakstructure & all 55 functions\\
+\includegraphics[width=0.268\textwidth,trim=0 0 0 13mm, clip]{pprldmany_05D_4-multi-modal_4-multi-modal} &
+\includegraphics[width=0.268\textwidth,trim=0 0 0 13mm, clip]{pprldmany_05D_4-multi-modal_5-weakly-structured} &
+\includegraphics[width=0.268\textwidth,trim=0 0 0 13mm, clip]{pprldmany_05D_5-weakly-structured_5-weakly-structured} &
+\includegraphics[width=0.268\textwidth,trim=0 0 0 13mm, clip]{pprldmany_05D_noiselessall}
+\vspace*{-0.5ex}
+\end{tabular}
+ \caption{\label{fig:ECDFsGroupsTwenty}
+ \bbobECDFslegend{20}
+ }
+\end{figure*}
 
 
 \clearpage
@@ -503,138 +577,138 @@ multimodal-multimodal & multimodal-weakstructure & weakstructure-weakstructure &
 % for functions $f_1$--$f_{55}$ of the bbob-biobj suite for dimension 20.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%\begin{table*}\tiny
-%\centering
-%\mbox{\begin{minipage}[t]{0.32\textwidth}\tiny
-%\centering
-%\input{\bbobdatapath pptables_f001_05D} 
-%
-%\input{\bbobdatapath pptables_f002_05D}
-%
-%\input{\bbobdatapath pptables_f003_05D}
-%
-%\input{\bbobdatapath pptables_f004_05D}
-%
-%\input{\bbobdatapath pptables_f005_05D}
-%
-%\input{\bbobdatapath pptables_f006_05D}
-%
-%\input{\bbobdatapath pptables_f007_05D}
-%
-%\input{\bbobdatapath pptables_f008_05D}
-%
-%\input{\bbobdatapath pptables_f009_05D}
-%
-%\input{\bbobdatapath pptables_f010_05D}
-%
-%\input{\bbobdatapath pptables_f011_05D}
-%
-%\input{\bbobdatapath pptables_f012_05D}
-%
-%\input{\bbobdatapath pptables_f013_05D}
-%
-%\input{\bbobdatapath pptables_f014_05D}
-%
-%\input{\bbobdatapath pptables_f015_05D}
-%
-%\input{\bbobdatapath pptables_f016_05D}
-%
-%\input{\bbobdatapath pptables_f017_05D}
-%
-%\input{\bbobdatapath pptables_f018_05D}
-%
-%\input{\bbobdatapath pptables_f019_05D}
-%
-%\end{minipage}
-%\hspace{0.002\textwidth}
-%\begin{minipage}[t]{0.32\textwidth}\tiny
-%\centering
-%
-%\input{\bbobdatapath pptables_f020_05D}
-%
-%\input{\bbobdatapath pptables_f021_05D}
-%
-%\input{\bbobdatapath pptables_f022_05D}
-%
-%\input{\bbobdatapath pptables_f023_05D}
-%
-%\input{\bbobdatapath pptables_f024_05D}
-%
-%\input{\bbobdatapath pptables_f025_05D}
-%
-%\input{\bbobdatapath pptables_f026_05D}
-%
-%\input{\bbobdatapath pptables_f027_05D}
-%
-%\input{\bbobdatapath pptables_f028_05D}
-%
-%\input{\bbobdatapath pptables_f029_05D}
-%
-%\input{\bbobdatapath pptables_f030_05D}
-%
-%\input{\bbobdatapath pptables_f031_05D}
-%
-%\input{\bbobdatapath pptables_f032_05D}
-%
-%\input{\bbobdatapath pptables_f033_05D}
-%
-%\input{\bbobdatapath pptables_f034_05D}
-%
-%\input{\bbobdatapath pptables_f035_05D}
-%
-%\input{\bbobdatapath pptables_f036_05D}
-%
-%\input{\bbobdatapath pptables_f037_05D}
-%
-%\end{minipage}
-%
-%\hspace{0.002\textwidth}
-%\begin{minipage}[t]{0.32\textwidth}\tiny
-%\centering
-%
-%\input{\bbobdatapath pptables_f038_05D}
-%
-%\input{\bbobdatapath pptables_f039_05D}
-%
-%\input{\bbobdatapath pptables_f040_05D}
-%
-%\input{\bbobdatapath pptables_f041_05D}
-%
-%\input{\bbobdatapath pptables_f042_05D}
-%
-%\input{\bbobdatapath pptables_f043_05D}
-%
-%\input{\bbobdatapath pptables_f044_05D}
-%
-%\input{\bbobdatapath pptables_f045_05D}
-%
-%\input{\bbobdatapath pptables_f046_05D}
-%
-%\input{\bbobdatapath pptables_f047_05D}
-%
-%\input{\bbobdatapath pptables_f048_05D}
-%
-%\input{\bbobdatapath pptables_f049_05D}
-%
-%\input{\bbobdatapath pptables_f050_05D}
-%
-%\input{\bbobdatapath pptables_f051_05D}
-%
-%\input{\bbobdatapath pptables_f052_05D}
-%
-%\input{\bbobdatapath pptables_f053_05D}
-%
-%\input{\bbobdatapath pptables_f054_05D}
-%
-%\input{\bbobdatapath pptables_f055_05D}
-%
-%\end{minipage}}
-%
-% \caption{\label{tab:aRTs20}
-% \bbobpptablesmanylegend{dimension $5$}{55} % Bonferroni correction: #dimensions * #functions
-% }
-%\end{table*}
-%
+\begin{table*}\tiny
+\centering
+\mbox{\begin{minipage}[t]{0.32\textwidth}\tiny
+\centering
+\input{\bbobdatapath pptables_f001_05D} 
+
+\input{\bbobdatapath pptables_f002_05D}
+
+\input{\bbobdatapath pptables_f003_05D}
+
+\input{\bbobdatapath pptables_f004_05D}
+
+\input{\bbobdatapath pptables_f005_05D}
+
+\input{\bbobdatapath pptables_f006_05D}
+
+\input{\bbobdatapath pptables_f007_05D}
+
+\input{\bbobdatapath pptables_f008_05D}
+
+\input{\bbobdatapath pptables_f009_05D}
+
+\input{\bbobdatapath pptables_f010_05D}
+
+\input{\bbobdatapath pptables_f011_05D}
+
+\input{\bbobdatapath pptables_f012_05D}
+
+\input{\bbobdatapath pptables_f013_05D}
+
+\input{\bbobdatapath pptables_f014_05D}
+
+\input{\bbobdatapath pptables_f015_05D}
+
+\input{\bbobdatapath pptables_f016_05D}
+
+\input{\bbobdatapath pptables_f017_05D}
+
+\input{\bbobdatapath pptables_f018_05D}
+
+\input{\bbobdatapath pptables_f019_05D}
+
+\end{minipage}
+\hspace{0.002\textwidth}
+\begin{minipage}[t]{0.32\textwidth}\tiny
+\centering
+
+\input{\bbobdatapath pptables_f020_05D}
+
+\input{\bbobdatapath pptables_f021_05D}
+
+\input{\bbobdatapath pptables_f022_05D}
+
+\input{\bbobdatapath pptables_f023_05D}
+
+\input{\bbobdatapath pptables_f024_05D}
+
+\input{\bbobdatapath pptables_f025_05D}
+
+\input{\bbobdatapath pptables_f026_05D}
+
+\input{\bbobdatapath pptables_f027_05D}
+
+\input{\bbobdatapath pptables_f028_05D}
+
+\input{\bbobdatapath pptables_f029_05D}
+
+\input{\bbobdatapath pptables_f030_05D}
+
+\input{\bbobdatapath pptables_f031_05D}
+
+\input{\bbobdatapath pptables_f032_05D}
+
+\input{\bbobdatapath pptables_f033_05D}
+
+\input{\bbobdatapath pptables_f034_05D}
+
+\input{\bbobdatapath pptables_f035_05D}
+
+\input{\bbobdatapath pptables_f036_05D}
+
+\input{\bbobdatapath pptables_f037_05D}
+
+\end{minipage}
+
+\hspace{0.002\textwidth}
+\begin{minipage}[t]{0.32\textwidth}\tiny
+\centering
+
+\input{\bbobdatapath pptables_f038_05D}
+
+\input{\bbobdatapath pptables_f039_05D}
+
+\input{\bbobdatapath pptables_f040_05D}
+
+\input{\bbobdatapath pptables_f041_05D}
+
+\input{\bbobdatapath pptables_f042_05D}
+
+\input{\bbobdatapath pptables_f043_05D}
+
+\input{\bbobdatapath pptables_f044_05D}
+
+\input{\bbobdatapath pptables_f045_05D}
+
+\input{\bbobdatapath pptables_f046_05D}
+
+\input{\bbobdatapath pptables_f047_05D}
+
+\input{\bbobdatapath pptables_f048_05D}
+
+\input{\bbobdatapath pptables_f049_05D}
+
+\input{\bbobdatapath pptables_f050_05D}
+
+\input{\bbobdatapath pptables_f051_05D}
+
+\input{\bbobdatapath pptables_f052_05D}
+
+\input{\bbobdatapath pptables_f053_05D}
+
+\input{\bbobdatapath pptables_f054_05D}
+
+\input{\bbobdatapath pptables_f055_05D}
+
+\end{minipage}}
+
+ \caption{\label{tab:aRTs20}
+ \bbobpptablesmanylegend{dimension $5$}{55} % Bonferroni correction: #dimensions * #functions
+ }
+\end{table*}
+
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
